@@ -78,10 +78,6 @@ Implementation bugs (low priority):
 - 3D planet view when entering orbit is now done, but there's some things
   which could make it look nicer, like better slave shield and removing 
   occasional pops/discontinuities
-  - Rotation and zooming isn't now as smooth as before after condition
-    variable DCQ patch
-    - This is because of the fact that all FlushGraphics routines wait on
-      one lone condition variable -- we need one per thread, effectively.
 - Transitions (crossfades) aren't perhaps correctly done always, syncing
   might be wrong etc.
   - Condition variable DCQ patch should have fixed this.  Confirm?
